<!--
  ~ Copyright (C)  2016 android@19code.com
  ~
  ~   Licensed under the Apache License, Version 2.0 (the "License");
  ~   you may not use this file except in compliance with the License.
  ~   You may obtain a copy of the License at
  ~
  ~       http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~   Unless required by applicable law or agreed to in writing, software
  ~   distributed under the License is distributed on an "AS IS" BASIS,
  ~   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~   See the License for the specific language governing permissions and
  ~   limitations under the License.
  -->

<resources>
    <string name="app_name">Android工具库</string>
    <string name="loading">加载中...</string>
    <string name="apputils">应用工具</string>
    <string name="cacheutils">缓存工具</string>
    <string name="bitmaputils">Bitmap工具</string>
    <string name="cipherutils">加密工具</string>
    <string name="dateutils">日期时间工具</string>
    <string name="logutils">日志工具</string>
    <string name="deviceutils">设备工具</string>
    <string name="fileutils">文件工具(升级应用)</string>
    <string name="jsonutils">Json工具</string>
    <string name="testutils">测试工具</string>
    <string name="sputils">属性工具</string>
    <string name="systemutils">系统工具</string>
    <string name="virificationutils">验证工具</string>
    <string name="viewutils">View工具</string>
</resources>
